--- a/index.html
+++ b/index.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RoboPie Tutorials</title>
-<style>
-  body {
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* IE10+/Edge */
-    user-select: none; /* Standard */
-  }
-  iframe {
-    width: 100%;
-    height: 600px;
-    border: none;
-    pointer-events: auto;
-  }
-</style>
-<script>
-  document.addEventListener('contextmenu', event => event.preventDefault());
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Robopie Tutorials</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        iframe {
+            width: 90%;
+            height: 600px;
+            border: none;
+            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+        }
+        select {
+            padding: 10px;
+            font-size: 16px;
+            margin-top: 20px;
+            width: 300px;
+        }
+    </style>
 </head>
 <body>
 
-<h2>SMART DUSTBIN SYSTEM TUTORIAL</h2>
-<iframe src="smart_dustbin_system_tutorial.pdf"></iframe>
+    <h1>Robopie Tutorials</h1>
 
-<h2>Electronics and Robotics Terms for Students</h2>
-<iframe src="electronics_robotics_terms.pdf"></iframe>
+    <select onchange="loadPDF(this.value)">
+        <option value="">-- Select Tutorial --</option>
+        <option value="smart_dustbin_system_tutorial.pdf">SMART DUSTBIN SYSTEM TUTORIAL</option>
+        <option value="electronics_robotics_terms.pdf">Electronics and Robotics Terms for Students</option>
+        <option value="automatic_plant_watering_system.pdf">Automatic Plant Watering System Using Soil Moisture Sensor and Arduino</option>
+        <option value="4_digit_password_lock_keypad_servo.pdf">4-Digit Password Lock Using Keypad & Servo Motor with Arduino</option>
+    </select>
 
-<h2>Automatic Plant Watering System Using Soil Moisture Sensor and Arduino</h2>
-<iframe src="automatic_plant_watering_system.pdf"></iframe>
+    <iframe id="pdfViewer" src=""></iframe>
 
-<h2>4-Digit Password Lock Using Keypad & Servo Motor with Arduino</h2>
-<iframe src="4_digit_password_lock_keypad_servo.pdf"></iframe>
+    <script>
+        function loadPDF(file) {
+            if (file) {
+                document.getElementById('pdfViewer').src = file;
+            } else {
+                document.getElementById('pdfViewer').src = "";
+            }
+        }
+    </script>
 
 </body>
 </html>
