--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
             margin: 0;
             padding: 20px;
             text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
         }
         h1 {
             color: #333;
+            margin-bottom: 20px;
         }
         iframe {
-            width: 90%;
-            height: 600px;
+            width: 80%;
+            height: 80vh;
             border: none;
             margin-top: 20px;
             box-shadow: 0 0 10px rgba(0,0,0,0.2);
