--- a/index.html
+++ b/index.html
@@ -1,94 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robopie Tutorials</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #56CCF2, #2F80ED);
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        h1 {
-            color: white;
-            margin-bottom: 20px;
-            font-size: 36px;
-        }
-        .tutorial-list {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-        .tutorial-item {
-            background-color: #ffffff;
-            color: #333;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: left;
-            cursor: pointer;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-        .tutorial-item:hover {
-            background-color: #4CAF50;
-            color: white;
-        }
-        iframe {
-            width: 80%;
-            height: 80vh;
-            border: none;
-            margin-top: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-        footer {
-            margin-top: 40px;
-            color: white;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Robopie Tutorials</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(to right, #56CCF2, #2F80ED);
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+    h1 {
+      color: white;
+      margin-bottom: 30px;
+      font-size: 36px;
+    }
+    .tutorial-list {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      width: 80%;
+      max-width: 600px;
+    }
+    .tutorial-item {
+      background-color: #ffffff;
+      color: #333;
+      padding: 15px 20px;
+      border-radius: 8px;
+      margin: 10px 0;
+      cursor: pointer;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: background 0.3s, color 0.3s;
+      text-align: left;
+      font-size: 18px;
+    }
+    .tutorial-item:hover {
+      background-color: #4CAF50;
+      color: white;
+    }
+    iframe {
+      width: 90%;
+      height: 600px;
+      border: none;
+      margin-top: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+    footer {
+      margin-top: 40px;
+      color: white;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
 
-    <h1>Robopie Tutorials</h1>
+  <h1>Robopie Tutorials</h1>
 
-    <div>
-        <ul class="tutorial-list">
-            <li class="tutorial-item" onclick="loadHTML('smart_dustbin_system_tutorial.html')">
-                SMART DUSTBIN SYSTEM TUTORIAL
-            </li>
-            <li class="tutorial-item" onclick="loadHTML('electronics_robotics_terms.html')">
-                Electronics and Robotics Terms for Students
-            </li>
-            <li class="tutorial-item" onclick="loadHTML('automatic_plant_watering_system.html')">
-                Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
-            </li>
-            <li class="tutorial-item" onclick="loadHTML('4_digit_password_lock_keypad_servo.html')">
-                4-Digit Password Lock Using Keypad & Servo Motor with Arduino
-            </li>
-        </ul>
-    </div>
+  <ul class="tutorial-list">
+    <li class="tutorial-item" onclick="loadHTML('SMARTDUSTBINSYSTEMTUTORIAL.html')">
+      SMART DUSTBIN SYSTEM TUTORIAL
+    </li>
+    <li class="tutorial-item" onclick="loadHTML('AutomaticPlantWateringSystemUsingSoilMoisture.html')">
+      Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+    </li>
+    <li class="tutorial-item" onclick="loadHTML('electronicsandRoboticsTermsforStudents.html')">
+      Electronics and Robotics Terms for Students
+    </li>
+    <li class="tutorial-item" onclick="loadHTML('4DigitPasswordLockUsingKeypadServoMotorwithAr.html')">
+      4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+    </li>
+  </ul>
 
-    <iframe id="htmlViewer" src=""></iframe>
+  <iframe id="htmlViewer" src=""></iframe>
 
-    <footer>
-        <p>&copy; 2025 Robopie. All Rights Reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Robopie. All Rights Reserved.</p>
+  </footer>
 
-    <script>
-        function loadHTML(file) {
-            document.getElementById('htmlViewer').src = file;
-        }
-    </script>
+  <script>
+    function loadHTML(file) {
+      document.getElementById('htmlViewer').src = file;
+    }
+  </script>
 
 </body>
 </html>
