--- a/index.html
+++ b/index.html
@@ -1,54 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Robopie Tutorials</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #f0f8ff;
-            color: #333;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-            color: #0077cc;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            background: #ffffff;
-            margin: 10px 0;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: transform 0.2s;
-        }
-        li:hover {
-            transform: scale(1.02);
-        }
-        a {
-            text-decoration: none;
-            color: #0077cc;
-            font-size: 18px;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Robopie Inc Tutorials</title>
+  <style>
+    body {
+      background: linear-gradient(to right, #74ebd5, #ACB6E5);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+      padding: 50px;
+      color: #333;
+    }
+    h1 {
+      font-size: 40px;
+      margin-bottom: 20px;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin: 20px 0;
+      font-size: 22px;
+    }
+    a {
+      text-decoration: none;
+      color: #1d3557;
+      background-color: #f1faee;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+      transition: 0.3s;
+    }
+    a:hover {
+      background-color: #a8dadc;
+      color: #023047;
+    }
+  </style>
 </head>
 <body>
 
-<h1>Robopie Tutorials</h1>
+<h1>🚀 Robopie Inc Tutorials</h1>
 
 <ul>
-    <li><a href="SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">SMART DUSTBIN SYSTEM TUTORIAL</a></li>
-    <li><a href="ElectronicsandRoboticsTermsforStudents.html" target="_blank">Electronics and Robotics Terms for Students</a></li>
-    <li><a href="AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Automatic Plant Watering System Using Soil Moisture Sensor and Arduino</a></li>
-    <li><a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">4-Digit Password Lock Using Keypad & Servo Motor with Arduino</a></li>
+  <li><a href="SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Smart Dustbin System Tutorial</a></li>
+  <li><a href="AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Automatic Plant Watering System Using Soil Moisture</a></li>
+  <li><a href="ElectronicsandRoboticsTermsforStudents.html" target="_blank">Electronics and Robotics Terms for Students</a></li>
+  <li><a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">4-Digit Password Lock Using Keypad & Servo Motor</a></li>
 </ul>
 
 </body>
