--- a/index.html
+++ b/index.html
@@ -1,52 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Robopie Inc Tutorials</title>
-  <style>
-    body {
-      background: linear-gradient(to right, #74ebd5, #ACB6E5);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      text-align: center;
-      padding: 50px;
-      color: #333;
-    }
-    h1 {
-      font-size: 40px;
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    li {
-      margin: 20px 0;
-      font-size: 22px;
-    }
-    a {
-      text-decoration: none;
-      color: #1d3557;
-      background-color: #f1faee;
-      padding: 10px 20px;
-      border-radius: 8px;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
-      transition: 0.3s;
-    }
-    a:hover {
-      background-color: #a8dadc;
-      color: #023047;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tutorials</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        .tutorial-list {
+            list-style-type: none;
+            margin: 0;
+            padding: 20px;
+        }
+        .tutorial-list li {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .tutorial-list li:hover {
+            background-color: #f1f1f1;
+        }
+        .tutorial-list a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+        }
+        .tutorial-list img {
+            width: 50px;
+            height: auto;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
 
-<h1>🚀 Robopie Inc Tutorials</h1>
+<header>
+    <h1>Robopie Tutorials</h1>
+    <p>Explore our range of tutorials</p>
+</header>
 
-<ul>
-  <li><a href="SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Smart Dustbin System Tutorial</a></li>
-  <li><a href="AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Automatic Plant Watering System Using Soil Moisture</a></li>
-  <li><a href="ElectronicsandRoboticsTermsforStudents.html" target="_blank">Electronics and Robotics Terms for Students</a></li>
-  <li><a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">4-Digit Password Lock Using Keypad & Servo Motor</a></li>
+<ul class="tutorial-list">
+    <li>
+        <a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
+            <img src="images/password.png" alt="Password Lock Image">
+            4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+        </a>
+    </li>
+    <li>
+        <a href="AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">
+            <img src="images/image2.png" alt="Automatic Plant Watering Image">
+            Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+        </a>
+    </li>
+    <li>
+        <a href="ElectronicsandRoboticsTermsforStudents.html" target="_blank">
+            <img src="images/image2.png" alt="Electronics Terms Image">
+            Electronics and Robotics Terms for Students
+        </a>
+    </li>
+    <li>
+        <a href="SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">
+            <img src="images/dustbin.png" alt="Dustbin System Image">
+            SMART DUSTBIN SYSTEM TUTORIAL
+        </a>
+    </li>
 </ul>
 
 </body>
