--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tutorials</title>
+    <title>Robopie Tutorials</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -58,25 +58,25 @@
 <ul class="tutorial-list">
     <li>
         <a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
-            <img src="images/password.png" alt="Password Lock Image">
+            <img src="./images/password.png" alt="Password Lock Image">
             4-Digit Password Lock Using Keypad & Servo Motor with Arduino
         </a>
     </li>
     <li>
         <a href="AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">
-            <img src="images/image2.png" alt="Automatic Plant Watering Image">
+            <img src="./images/image2.png" alt="Automatic Plant Watering Image">
             Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
         </a>
     </li>
     <li>
         <a href="ElectronicsandRoboticsTermsforStudents.html" target="_blank">
-            <img src="images/image2.png" alt="Electronics Terms Image">
+            <img src="./images/image2.png" alt="Electronics Terms Image">
             Electronics and Robotics Terms for Students
         </a>
     </li>
     <li>
         <a href="SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">
-            <img src="images/dustbin.png" alt="Dustbin System Image">
+            <img src="./images/dustbin.png" alt="Dustbin System Image">
             SMART DUSTBIN SYSTEM TUTORIAL
         </a>
     </li>
