--- a/index.html
+++ b/index.html
@@ -1,85 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robopie Tutorials</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        .tutorial-list {
-            list-style-type: none;
-            margin: 0;
-            padding: 20px;
-        }
-        .tutorial-list li {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .tutorial-list li:hover {
-            background-color: #f1f1f1;
-        }
-        .tutorial-list a {
-            text-decoration: none;
-            color: #333;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-        }
-        .tutorial-list img {
-            width: 50px;
-            height: auto;
-            margin-right: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Robopie Tutorials</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    ul {
+      list-style: none;
+      padding: 20px;
+    }
+    li {
+      background: #fff;
+      margin-bottom: 10px;
+      padding: 10px;
+      border-radius: 5px;
+      display: flex;
+      align-items: center;
+      transition: background 0.3s;
+      border: 1px solid #ccc;
+    }
+    li:hover {
+      background: #eee;
+    }
+    img {
+      width: 50px;
+      margin-right: 10px;
+    }
+    a {
+      color: #333;
+      text-decoration: none;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
 
 <header>
-    <h1>Robopie Tutorials</h1>
-    <p>Explore our range of tutorials</p>
+  <h1>Robopie Tutorials</h1>
+  <p>Explore our range of tutorials</p>
 </header>
 
-<ul class="tutorial-list">
-    <li>
-        <a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
-            <img src="./images/password.png" alt="Password Lock Image">
-            4-Digit Password Lock Using Keypad & Servo Motor with Arduino
-        </a>
-    </li>
-    <li>
-        <a href="AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">
-            <img src="./images/image2.png" alt="Automatic Plant Watering Image">
-            Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
-        </a>
-    </li>
-    <li>
-        <a href="ElectronicsandRoboticsTermsforStudents.html" target="_blank">
-            <img src="./images/image2.png" alt="Electronics Terms Image">
-            Electronics and Robotics Terms for Students
-        </a>
-    </li>
-    <li>
-        <a href="SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">
-            <img src="./images/dustbin.png" alt="Dustbin System Image">
-            SMART DUSTBIN SYSTEM TUTORIAL
-        </a>
-    </li>
+<ul>
+  <li>
+    <a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
+      <img src="./images/password.png" alt="Password Lock Image">
+      4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+    </a>
+  </li>
 </ul>
 
 </body>
