--- a/index.html
+++ b/index.html
@@ -1,64 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Robopie Tutorials</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-    ul {
-      list-style: none;
-      padding: 20px;
-    }
-    li {
-      background: #fff;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      display: flex;
-      align-items: center;
-      transition: background 0.3s;
-      border: 1px solid #ccc;
-    }
-    li:hover {
-      background: #eee;
-    }
-    img {
-      width: 50px;
-      margin-right: 10px;
-    }
-    a {
-      color: #333;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tutorials</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        .tutorial-list {
+            list-style-type: none;
+            margin: 0;
+            padding: 20px;
+        }
+        .tutorial-list li {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            margin: 10px 0;
+            padding: 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .tutorial-list li:hover {
+            background-color: #f1f1f1;
+        }
+        .tutorial-list a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+        }
+        .tutorial-list img {
+            width: 50px;
+            height: auto;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-  <h1>Robopie Tutorials</h1>
-  <p>Explore our range of tutorials</p>
+    <h1>Robopie Tutorials</h1>
+    <p>Explore our range of tutorials</p>
 </header>
 
-<ul>
-  <li>
-    <a href="4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
-      <img src="./images/password.png" alt="Password Lock Image">
-      4-Digit Password Lock Using Keypad & Servo Motor with Arduino
-    </a>
-  </li>
+<ul class="tutorial-list">
+    <li>
+        <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
+            <img src="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/images/image1.png" alt="Password Lock Image">
+            4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+        </a>
+    </li>
+    <li>
+        <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">
+            <img src="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/images/image1.png" alt="Plant Watering Image">
+            Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+        </a>
+    </li>
+    <li>
+        <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">
+            <img src="Controlling a 7-Segment Display via Serial Monitor using Arduino/images/image1.png" alt="7-Segment Display Image">
+            Controlling a 7-Segment Display via Serial Monitor using Arduino
+        </a>
+    </li>
+    <li>
+        <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">
+            <img src="Electronics and Robotics Terms for Students/images/image1.png" alt="Electronics Terms Image">
+            Electronics and Robotics Terms for Students
+        </a>
+    </li>
+    <li>
+        <a href="Neopixel LED/NeopixleLED.html" target="_blank">
+            <img src="Neopixel LED/images/image1.png" alt="Neopixel LED Image">
+            Neopixel LED
+        </a>
+    </li>
+    <li>
+        <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">
+            <img src="SMART DUSTBIN SYSTEM TUTORIAL/images/image1.png" alt="Dustbin System Image">
+            SMART DUSTBIN SYSTEM TUTORIAL
+        </a>
+    </li>
+    <li>
+        <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">
+            <img src="Ultrasonic Radar with Arduino/images/image1.png" alt="Ultrasonic Radar Image">
+            Ultrasonic Radar with Arduino
+        </a>
+    </li>
 </ul>
 
 </body>
