--- a/index.html
+++ b/index.html
@@ -8,52 +8,48 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            background: #f0f2f5;
+            padding: 0;
+            background-color: #0d0d1a; /* Dark background */
+            color: #f0f0f5; /* Light text */
         }
         header {
-            background: linear-gradient(90deg, #0066ff, #00ccff);
-            color: white;
-            padding: 30px 0;
+            background: linear-gradient(135deg, #0f3460, #16213e); /* Oppel gemstone feel */
+            color: #fff;
+            padding: 30px;
             text-align: center;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.6);
         }
-        .container {
-            max-width: 1000px;
-            margin: 30px auto;
-            padding: 0 20px;
+        .tutorial-list {
+            list-style-type: none;
+            margin: 20px;
+            padding: 0;
         }
-        .tutorial-card {
-            background: white;
-            margin-bottom: 20px;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            transition: transform 0.3s;
+        .tutorial-list li {
+            background: linear-gradient(135deg, #1a1a2e, #16213e);
+            border: 1px solid #2c2c54;
+            margin: 15px 0;
+            padding: 15px;
+            border-radius: 10px;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+        }
+        .tutorial-list li:hover {
+            background: linear-gradient(135deg, #3a0ca3, #4361ee);
+            transform: translateY(-3px);
+        }
+        .tutorial-list a {
+            text-decoration: none;
+            color: #f0f0f5;
+            font-weight: bold;
             display: flex;
             align-items: center;
         }
-        .tutorial-card:hover {
-            transform: translateY(-5px);
-        }
-        .tutorial-card img {
-            width: 120px;
-            height: 100%;
-            object-fit: cover;
-        }
-        .tutorial-info {
-            padding: 20px;
-            flex-grow: 1;
-        }
-        .tutorial-info a {
-            text-decoration: none;
-            color: #333;
-            font-size: 1.2em;
-            font-weight: bold;
-            display: block;
-            margin-bottom: 5px;
-        }
-        .tutorial-info a:hover {
-            color: #0066ff;
+        .tutorial-list img {
+            width: 60px;
+            height: auto;
+            margin-right: 15px;
+            border-radius: 8px;
+            border: 2px solid #2c2c54;
         }
     </style>
 </head>
@@ -61,74 +57,53 @@
 
 <header>
     <h1>Robopie Tutorials</h1>
-    <p>Beginner-friendly projects for students, makers, and enthusiasts</p>
+    <p>Explore our latest projects and guides 🚀</p>
 </header>
 
-<div class="container">
-    <div class="tutorial-card">
-        <img src="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/images/image1.png" alt="Password Lock">
-        <div class="tutorial-info">
-            <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
-                4-Digit Password Lock Using Keypad & Servo Motor with Arduino
-            </a>
-        </div>
-    </div>
-
-    <div class="tutorial-card">
-        <img src="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/images/image1.png" alt="Plant Watering">
-        <div class="tutorial-info">
-            <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">
-                Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
-            </a>
-        </div>
-    </div>
-
-    <div class="tutorial-card">
-        <img src="Controlling a 7-Segment Display via Serial Monitor using Arduino/images/image1.png" alt="7-Segment Display">
-        <div class="tutorial-info">
-            <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">
-                Controlling a 7-Segment Display via Serial Monitor using Arduino
-            </a>
-        </div>
-    </div>
-
-    <div class="tutorial-card">
-        <img src="Electronics and Robotics Terms for Students/images/image1.png" alt="Electronics Terms">
-        <div class="tutorial-info">
-            <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">
-                Electronics and Robotics Terms for Students
-            </a>
-        </div>
-    </div>
-
-    <div class="tutorial-card">
-        <img src="Neopixel LED/images/image1.png" alt="Neopixel LED">
-        <div class="tutorial-info">
-            <a href="Neopixel LED/NeopixleLED.html" target="_blank">
-                Neopixel LED
-            </a>
-        </div>
-    </div>
-
-    <div class="tutorial-card">
-        <img src="SMART DUSTBIN SYSTEM TUTORIAL/images/image1.png" alt="Smart Dustbin">
-        <div class="tutorial-info">
-            <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">
-                SMART DUSTBIN SYSTEM TUTORIAL
-            </a>
-        </div>
-    </div>
-
-    <div class="tutorial-card">
-        <img src="Ultrasonic Radar with Arduino/images/image1.png" alt="Ultrasonic Radar">
-        <div class="tutorial-info">
-            <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">
-                Ultrasonic Radar with Arduino
-            </a>
-        </div>
-    </div>
-
-</div>
+<ul class="tutorial-list">
+    <li>
+        <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">
+            <img src="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/images/image1.png" alt="Password Lock Image">
+            4-Digit Password Lock Using Keypad & Servo Motor with Arduino
+        </a>
+    </li>
+    <li>
+        <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">
+            <img src="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/images/image1.png" alt="Plant Watering Image">
+            Automatic Plant Watering System Using Soil Moisture Sensor and Arduino
+        </a>
+    </li>
+    <li>
+        <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">
+            <img src="Controlling a 7-Segment Display via Serial Monitor using Arduino/images/image1.png" alt="7-Segment Display Image">
+            Controlling a 7-Segment Display via Serial Monitor using Arduino
+        </a>
+    </li>
+    <li>
+        <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">
+            <img src="Electronics and Robotics Terms for Students/images/image1.png" alt="Electronics Terms Image">
+            Electronics and Robotics Terms for Students
+        </a>
+    </li>
+    <li>
+        <a href="Neopixel LED/NeopixelLED.html" target="_blank">
+            <img src="Neopixel LED/images/image1.png" alt="Neopixel LED Image">
+            Neopixel LED
+        </a>
+    </li>
+    <li>
+        <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">
+            <img src="SMART DUSTBIN SYSTEM TUTORIAL/images/image1.png" alt="Dustbin System Image">
+            SMART DUSTBIN SYSTEM TUTORIAL
+        </a>
+    </li>
+    <li>
+        <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">
+            <img src="Ultrasonic Radar with Arduino/images/image1.png" alt="Ultrasonic Radar Image">
+            Ultrasonic Radar with Arduino
+        </a>
+    </li>
+</ul>
 
 </body>
 </html>
