--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         </a>
     </li>
     <li>
-        <a href="Neopixel LED/NeopixelLED.html" target="_blank">
-            <img src="Neopixel LED/images/image1.png" alt="Neopixel LED Image">
-            Neopixel LED
+        <a href="Neopixle LED/NeopixelLED.html" target="_blank">
+            <img src="Neopixle LED/images/image1.png" alt="Neopixle LED Image">
+            Neopixle LED
         </a>
     </li>
     <li>
