--- a/index.html
+++ b/index.html
@@ -26,9 +26,15 @@
             font-size: 1.2em;
             color: #ccc;
         }
+        h2 {
+            margin: 40px 0 20px 0;
+            text-align: center;
+            font-size: 2em;
+            color: #00ffcc;
+        }
         .accordion {
             width: 90%;
-            margin: 20px auto;
+            margin: 0 auto 20px;
         }
         .accordion-item {
             background-color: #222;
@@ -82,57 +88,58 @@
     <p>Explore Our Tutorials</p>
 </header>
 
+<!-- BASICS CATEGORY -->
+<h2>Basics</h2>
+<div class="accordion">
+
+    <!-- Tutorial Start -->
+    <div class="accordion-item">
+        <div class="accordion-header green">Controlling a 4WD Car Using Firebase</div>
+        <div class="accordion-content">
+            <a href="tutorials/Controlling4WDFirebase/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+    <!-- Tutorial End -->
+
+</div>
+
+<!-- ROBOTICS CATEGORY -->
+<h2>Robotics</h2>
 <div class="accordion">
 
     <div class="accordion-item">
-        <div class="accordion-header yellow">4-Digit Password Lock Using Keypad & Servo Motor</div>
+        <div class="accordion-header maroon">Interfacing Joystick to Arduino</div>
         <div class="accordion-content">
-            <a href="4-Digit Password Lock Using Keypad & Servo Motor with Arduino/4DigitPasswordLockUsingKeypadServoMotorwithAr.html" target="_blank">Open Tutorial</a>
+            <a href="tutorials/InterfacingJoystickArduino/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- IOT CATEGORY -->
+<h2>IoT</h2>
+<div class="accordion">
+
+    <div class="accordion-item">
+        <div class="accordion-header purple">AccessPoint ESP8266 Hotspot</div>
+        <div class="accordion-content">
+            <a href="tutorials/AccessPointESP8266Hotspot/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
     <div class="accordion-item">
-        <div class="accordion-header purple">Automatic Plant Watering System Using Soil Moisture Sensor</div>
+        <div class="accordion-header yellow">Bluetooth controlling LED light</div>
         <div class="accordion-content">
-            <a href="Automatic Plant Watering System Using Soil Moisture Sensor and Arduino/AutomaticPlantWateringSystemUsingSoilMoisture.html" target="_blank">Open Tutorial</a>
+            <a href="tutorials/BluetoothControllingLED/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
-    <div class="accordion-item">
-        <div class="accordion-header maroon">Controlling a 7-Segment Display via Serial Monitor</div>
-        <div class="accordion-content">
-            <a href="Controlling a 7-Segment Display via Serial Monitor using Arduino/Controllinga7SegmentDisplayviaSerialMonitorus.html" target="_blank">Open Tutorial</a>
-        </div>
-    </div>
+</div>
 
-    <div class="accordion-item">
-        <div class="accordion-header green">Electronics and Robotics Terms for Students</div>
-        <div class="accordion-content">
-            <a href="Electronics and Robotics Terms for Students/ElectronicsandRoboticsTermsforStudents.html" target="_blank">Open Tutorial</a>
-        </div>
-    </div>
-
-    <div class="accordion-item">
-        <div class="accordion-header purple">Neopixel LED</div>
-        <div class="accordion-content">
-            <a href="Neopixle LED/NeopixelLED.html" target="_blank">Open Tutorial</a>
-        </div>
-    </div>
-
-    <div class="accordion-item">
-        <div class="accordion-header maroon">SMART DUSTBIN SYSTEM TUTORIAL</div>
-        <div class="accordion-content">
-            <a href="SMART DUSTBIN SYSTEM TUTORIAL/SMARTDUSTBINSYSTEMTUTORIAL.html" target="_blank">Open Tutorial</a>
-        </div>
-    </div>
-
-    <div class="accordion-item">
-        <div class="accordion-header green">Ultrasonic Radar with Arduino</div>
-        <div class="accordion-content">
-            <a href="Ultrasonic Radar with Arduino/UltrasonicRadarwithArduino.html" target="_blank">Open Tutorial</a>
-        </div>
-    </div>
-
+<!-- RASPBERRY PI CATEGORY -->
+<h2>Raspberry Pi</h2>
+<div class="accordion">
+    <!-- Filhaal blank - aage add karna -->
 </div>
 
 <div class="footer">
