--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
             box-shadow: 0 2px 10px rgba(0,0,0,0.3);
         }
         .accordion-header {
-            background: linear-gradient(45deg, #ffde59, #ff914d);
+            background-color: #104046;
             padding: 15px;
             font-size: 1.5em;
             cursor: pointer;
             transition: background 0.3s, transform 0.2s;
+            color: #fff;
         }
         .accordion-header:hover {
             filter: brightness(1.2);
@@ -101,6 +102,26 @@
     </div>
     <!-- Tutorial End -->
 
+    <!-- Add more dummy tutorials here -->
+    <div class="accordion-item">
+        <div class="accordion-header green">Tutorial Dummy 1</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy1/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <div class="accordion-header green">Tutorial Dummy 2</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy2/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <div class="accordion-header green">Tutorial Dummy 3</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy3/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+
 </div>
 
 <!-- ROBOTICS CATEGORY -->
@@ -111,6 +132,26 @@
         <div class="accordion-header maroon">Interfacing Joystick to Arduino</div>
         <div class="accordion-content">
             <a href="tutorials/InterfacingJoystickArduino/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+
+    <!-- Add more dummy tutorials here -->
+    <div class="accordion-item">
+        <div class="accordion-header maroon">Tutorial Dummy 4</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy4/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <div class="accordion-header maroon">Tutorial Dummy 5</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy5/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <div class="accordion-header maroon">Tutorial Dummy 6</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy6/index.html" target="_blank">Open Tutorial</a>
         </div>
     </div>
 
@@ -134,12 +175,32 @@
         </div>
     </div>
 
+    <!-- Add more dummy tutorials here -->
+    <div class="accordion-item">
+        <div class="accordion-header yellow">Tutorial Dummy 7</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy7/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+    <div class="accordion-item">
+        <div class="accordion-header yellow">Tutorial Dummy 8</div>
+        <div class="accordion-content">
+            <a href="tutorials/Dummy8/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
+
 </div>
 
 <!-- RASPBERRY PI CATEGORY -->
 <h2>Raspberry Pi</h2>
 <div class="accordion">
-    <!-- Filhaal blank - aage add karna -->
+    <!-- Empty for now, can be filled later -->
+    <div class="accordion-item">
+        <div class="accordion-header purple">Raspberry Pi Tutorial Dummy</div>
+        <div class="accordion-content">
+            <a href="tutorials/RaspberryPiTutorial/index.html" target="_blank">Open Tutorial</a>
+        </div>
+    </div>
 </div>
 
 <div class="footer">
